--- a/local_version/back/main.ipynb
+++ b/local_version/back/main.ipynb
@@ -4,13 +4,128 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (1.24.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (3.7.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (1.0.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (4.39.4)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: numpy>=1.20 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (1.24.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (23.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (9.5.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: ipympl in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (0.9.3)\n",
+      "Requirement already satisfied: ipython<9 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipympl) (8.13.2)\n",
+      "Requirement already satisfied: numpy in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipympl) (1.24.3)\n",
+      "Requirement already satisfied: ipython-genutils in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipympl) (0.2.0)\n",
+      "Requirement already satisfied: pillow in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipympl) (9.5.0)\n",
+      "Requirement already satisfied: traitlets<6 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipympl) (5.9.0)\n",
+      "Requirement already satisfied: ipywidgets<9,>=7.6.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipympl) (8.0.6)\n",
+      "Requirement already satisfied: matplotlib<4,>=3.4.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipympl) (3.7.1)\n",
+      "Requirement already satisfied: backcall in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipython<9->ipympl) (0.2.0)\n",
+      "Requirement already satisfied: decorator in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipython<9->ipympl) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipython<9->ipympl) (0.18.2)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipython<9->ipympl) (0.1.6)\n",
+      "Requirement already satisfied: pickleshare in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipython<9->ipympl) (0.7.5)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipython<9->ipympl) (3.0.38)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipython<9->ipympl) (2.15.1)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipython<9->ipympl) (0.6.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipython<9->ipympl) (0.4.6)\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipywidgets<9,>=7.6.0->ipympl) (6.23.1)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.7 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipywidgets<9,>=7.6.0->ipympl) (4.0.7)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0.7 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipywidgets<9,>=7.6.0->ipympl) (3.0.7)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (1.0.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (4.39.4)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (1.4.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (23.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (2.8.2)\n",
+      "Requirement already satisfied: comm>=0.1.1 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (0.1.3)\n",
+      "Requirement already satisfied: debugpy>=1.6.5 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (1.6.7)\n",
+      "Requirement already satisfied: jupyter-client>=6.1.12 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (8.2.0)\n",
+      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (5.3.0)\n",
+      "Requirement already satisfied: nest-asyncio in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (1.5.6)\n",
+      "Requirement already satisfied: psutil in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (5.9.5)\n",
+      "Requirement already satisfied: pyzmq>=20 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (25.0.2)\n",
+      "Requirement already satisfied: tornado>=6.1 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (6.3.2)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from jedi>=0.16->ipython<9->ipympl) (0.8.3)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30->ipython<9->ipympl) (0.2.6)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from python-dateutil>=2.7->matplotlib<4,>=3.4.0->ipympl) (1.16.0)\n",
+      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from stack-data->ipython<9->ipympl) (1.2.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from stack-data->ipython<9->ipympl) (2.2.1)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from stack-data->ipython<9->ipympl) (0.2.2)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from jupyter-core!=5.0.*,>=4.12->ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (3.5.1)\n",
+      "Requirement already satisfied: pywin32>=300 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from jupyter-core!=5.0.*,>=4.12->ipykernel>=4.5.1->ipywidgets<9,>=7.6.0->ipympl) (306)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: Pillow in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (9.5.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: opencv-contrib-python in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (4.7.0.72)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: numpy>=1.21.2 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from opencv-contrib-python) (1.24.3)\n",
+      "Collecting pandas\n",
+      "  Downloading pandas-2.0.1-cp311-cp311-win_amd64.whl (10.6 MB)\n",
+      "                                              0.0/10.6 MB ? eta -:--:--\n",
+      "                                              0.2/10.6 MB 4.1 MB/s eta 0:00:03\n",
+      "     --                                       0.8/10.6 MB 8.1 MB/s eta 0:00:02\n",
+      "     -----                                    1.4/10.6 MB 9.6 MB/s eta 0:00:01\n",
+      "     -------                                  2.0/10.6 MB 10.4 MB/s eta 0:00:01\n",
+      "     ---------                                2.5/10.6 MB 10.6 MB/s eta 0:00:01\n",
+      "     ---------                                2.6/10.6 MB 11.2 MB/s eta 0:00:01\n",
+      "     -------------                            3.6/10.6 MB 11.5 MB/s eta 0:00:01\n",
+      "     ---------------                          4.2/10.6 MB 11.6 MB/s eta 0:00:01\n",
+      "     ------------------                       4.8/10.6 MB 11.4 MB/s eta 0:00:01\n",
+      "     -------------------                      5.2/10.6 MB 11.2 MB/s eta 0:00:01\n",
+      "     ---------------------                    5.6/10.6 MB 10.9 MB/s eta 0:00:01\n",
+      "     ----------------------                   6.0/10.6 MB 10.7 MB/s eta 0:00:01\n",
+      "     ------------------------                 6.4/10.6 MB 10.5 MB/s eta 0:00:01\n",
+      "     -------------------------                6.9/10.6 MB 10.4 MB/s eta 0:00:01\n",
+      "     ---------------------------              7.3/10.6 MB 10.3 MB/s eta 0:00:01\n",
+      "     -----------------------------            7.7/10.6 MB 10.3 MB/s eta 0:00:01\n",
+      "     ------------------------------           8.2/10.6 MB 10.2 MB/s eta 0:00:01\n",
+      "     --------------------------------         8.6/10.6 MB 10.2 MB/s eta 0:00:01\n",
+      "     ----------------------------------       9.0/10.6 MB 10.1 MB/s eta 0:00:01\n",
+      "     -----------------------------------      9.5/10.6 MB 10.1 MB/s eta 0:00:01\n",
+      "     -------------------------------------    9.9/10.6 MB 10.1 MB/s eta 0:00:01\n",
+      "     -------------------------------------   10.3/10.6 MB 10.1 MB/s eta 0:00:01\n",
+      "     --------------------------------------  10.6/10.6 MB 10.2 MB/s eta 0:00:01\n",
+      "     --------------------------------------  10.6/10.6 MB 10.2 MB/s eta 0:00:01\n",
+      "     --------------------------------------  10.6/10.6 MB 10.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 10.6/10.6 MB 9.1 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas) (2.8.2)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Downloading pytz-2023.3-py2.py3-none-any.whl (502 kB)\n",
+      "                                              0.0/502.3 kB ? eta -:--:--\n",
+      "     --------------------------------       430.1/502.3 kB 8.9 MB/s eta 0:00:01\n",
+      "     -------------------------------------- 502.3/502.3 kB 7.9 MB/s eta 0:00:00\n",
+      "Collecting tzdata>=2022.1 (from pandas)\n",
+      "  Downloading tzdata-2023.3-py2.py3-none-any.whl (341 kB)\n",
+      "                                              0.0/341.8 kB ? eta -:--:--\n",
+      "     -------------------------------------- 341.8/341.8 kB 7.2 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas) (1.24.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\eichl\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.0.1 pytz-2023.3 tzdata-2023.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#%pip install numpy\n",
-    "#%pip install matplotlib\n",
-    "#%pip install ipympl\n",
-    "#%pip install Pillow\n",
-    "#%pip install opencv-contrib-python\n"
+    "%pip install numpy\n",
+    "%pip install matplotlib\n",
+    "%pip install ipympl\n",
+    "%pip install Pillow\n",
+    "%pip install opencv-contrib-python\n",
+    "%pip install pandas"
    ]
   },
   {
@@ -136,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
